Registro de Analisis Medicos Completando Estructura

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -53,8 +53,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{ac469ae6-9ecc-4a93-8426-0097dc0ada78}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
