--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalisisRepositorio.cs" />
     <Compile Include="IRepository.cs" />
     <Compile Include="RepositorioBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -56,6 +57,10 @@
     <ProjectReference Include="..\DAL\DAL.csproj">
       <Project>{ac469ae6-9ecc-4a93-8426-0097dc0ada78}</Project>
       <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Entidades\Entidades.csproj">
+      <Project>{1532872f-5ce2-4f19-be84-5bbfd1d2f9f0}</Project>
+      <Name>Entidades</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
