--- a/RegistroAnalisis/Web.config
+++ b/RegistroAnalisis/Web.config
@@ -5,6 +5,9 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="ConStr" connectionString="Data Source=LAPTOP-A36JVI0R;&#xD;&#xA;         Initial Catalog=RegistroAnalisisDb;&#xD;&#xA;         Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
