Registro de Analisis

--- a/RegistroAnalisis/Web.config
+++ b/RegistroAnalisis/Web.config
@@ -6,7 +6,9 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConStr" connectionString="Data Source=LAPTOP-A36JVI0R;&#xD;&#xA;         Initial Catalog=RegistroAnalisisDb;&#xD;&#xA;         Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ConStr" connectionString="Data Source=LAPTOP-A36JVI0R;&#xD;&#xA; 
+      Initial Catalog=RegistroAnalisisDb;&#xD;&#xA;        
+      Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
